<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Traffic lights</string>
    <string name="red">Red</string>
    <string name="yellow">Yellow</string>
    <string name="green">Green</string>
    <string name="todo" translatable="false">TODO</string>
    <string name="text_view_light_off">Traffic Light Off</string>
    <string name="about_text">Hello. I, Traffic Light App</string>
    <string name="about_title">About App</string>
    <string name="messenger">Messenger</string>
    <string name="transfer">Transfer</string>
    <string name="transfer_data_activity_title">Data Transfer</string>
    <string name="plain_text_whom">Whom</string>
    <string name="plain_text_description">Description</string>
    <string name="toast_to_exit">Press once again to exit</string>
    <string name="test_worker">This is Worker</string>
    <string name="plain_text_who">Who</string>
    <string name="say_hi">allowed to cross the road at a red light</string>
    <string name="text_view_your_name">Your Name</string>
    <string name="label_from_whom">From</string>
    <string name="label_for_someone">For</string>
    <string name="mess">Message</string>
    <string name="text_recevity_info">Revenues have not yet been</string>
    <string name="title_recevity">My Salary</string>
    <string name="title_seccond">New Arrival</string>
    <string name="gender">Gender</string>
    <string name="age">Age</string>

    <string name="action_settings">Settings</string>

    <string name="action_save">Save</string>

    <string name="gender_male">Cat</string>
    <string name="gender_female">Pussy</string>


    <string-array name="array_gender_options">
        <item>@string/gender_female</item>
        <item>@string/gender_male</item>
        <item>@string/gender_unknown</item>
    </string-array>
    <string name="action_delete">Delete</string>
    <string name="gender_unknown">Unknown</string>
</resources>
