<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/mInfoTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.367"
        tools:text="@string/text_view_light_off" />

    <Button
        android:id="@+id/btn_red"
        android:layout_width="126dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="32dp"
        android:text="@string/red"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mInfoTextView" />

    <Button
        android:id="@+id/btn_yellow"
        android:layout_width="127dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/yellow"
        app:layout_constraintEnd_toEndOf="@+id/btn_red"
        app:layout_constraintStart_toStartOf="@+id/btn_red"
        app:layout_constraintTop_toBottomOf="@+id/btn_red" />

    <Button
        android:id="@+id/btn_green"
        android:layout_width="126dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/green"
        app:layout_constraintEnd_toEndOf="@+id/btn_yellow"
        app:layout_constraintStart_toStartOf="@+id/btn_yellow"
        app:layout_constraintTop_toBottomOf="@+id/btn_yellow" />

    <ImageButton
        android:id="@+id/iBTrafficLight"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@android:drawable/toast_frame"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toTopOf="@+id/mInfoTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.771" />

</android.support.constraint.ConstraintLayout>